--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="preloder">
 		<div class="loader">
 			<img src="img/logo.png" alt="">
-			<h2>Loading.....</h2>
+			<h2>Cargando.....</h2>
 		</div>
 	</div>
 
@@ -47,7 +47,7 @@
 		<nav>
 			<ul class="menu-list">
 				<li class="active"><a href="index.html">Inicio</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -255,7 +255,7 @@
 	<!-- Services section -->
 	<div class="services-section spad">
 		<div class="container">
-			<div class="section-title dark">
+			<div class="section-title dark" >
 				<h2> <span>Armonización estética </span> Group: Tratamientos </h2>
 			</div>
 			<div class="row">
@@ -372,9 +372,9 @@
 					</div>
 				
 			</div>
-			<div class="text-center">
+			<!--<div class="text-center">
 				<a href="" class="site-btn">Browse</a>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<!-- services section end -->
@@ -438,42 +438,102 @@
 
 
 	<!-- Contact section -->
-	<div class="contact-section spad fix">
-		<div class="container">
-			<div class="row">
-				<!-- contact info -->
+
+<!-- Begin Mailchimp Signup Form -->
+
+<!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style> -->
+<div class="contact-section spad fix">
+	<div class="container">
+		<div class="row">
+
 				<div class="col-md-5 col-md-offset-1 contact-info col-push">
-					<div class="section-title left">
-						<h2>Contact us</h2>
-					</div>
-					<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. </p>
-					<h3 class="mt60">Main Office</h3>
-					<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
-					<p class="con-item">0034 37483 2445 322</p>
-					<p class="con-item">hello@company.com</p>
-				</div>
-				<!-- contact form -->
-				<div class="col-md-6 col-pull">
-					<form class="form-class" id="con_form">
-						<div class="row">
-							<div class="col-sm-6">
-								<input type="text" name="name" placeholder="Your name">
-							</div>
-							<div class="col-sm-6">
-								<input type="text" name="email" placeholder="Your email">
-							</div>
-							<div class="col-sm-12">
-								<input type="text" name="subject" placeholder="Subject">
-								<textarea name="message" placeholder="Message"></textarea>
-								<button class="site-btn">send</button>
-							</div>
+						<div class="section-title left">
+							<h2>Contact us</h2>
 						</div>
-					</form>
+						<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. </p>
+						<h3 class="mt60">Main Office</h3>
+						<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
+						<p class="con-item">0034 37483 2445 322</p>
+						<p class="con-item">hello@company.com</p>
+					</div>
+					<div class="col-md-6 col-pull">
+			<form action="https://ivangelramos.us19.list-manage.com/subscribe/post?u=ccc8bdf14bc9360f2e8eaa398&amp;id=0c03a2d6c5"
+			 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-class" id="con_form" target="_blank"
+			 novalidate>
+				<!--<div class="col-md-5 col-md-offset-1 contact-info col-push"> -->
+					<div class="section-title left">
+						<h2>Armonización Estética Group: Contacto</h2>
+						
+						<div class="col-sm-6">
+						<!--	<label for="mce-EMAIL">Tu correo electrónico <span class="asterisk">*</span>
+							</label> -->
+							<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Tu Correo *">
+						</div>
+
+						<div class="col-sm-6">
+							<!--<label for="mce-FNAME">Nombre completo <span class="asterisk">*</span>
+							</label>
+							-->
+							<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Tu nombre completo *">
+						</div>
+						<div class="col-sm-6">
+							<!--<label for="mce-PHONE">Tu teléfono <span class="asterisk">*</span>
+							</label> -->
+							<input type="text" name="PHONE" class="required" value="" id="mce-PHONE" placeholder="Tu Teléfono *">
+						</div>
+						<div class="col-sm-6">
+							<!--<label for="mce-MMERGE2">Tu ciudad y país <span class="asterisk">*</span>
+							</label> -->
+							<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Tu Ciudad y país *">
+						</div>
+						<div class="col-sm-12">
+							<!--<label for="mce-MMERGE3">Tu mensaje <span class="asterisk">*</span>
+							</label> -->
+							<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="Tu Mensaje *">
+						</div>
+						<div class="indicates-required"><span class="asterisk">*</span> Campos requeridos</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>
+						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccc8bdf14bc9360f2e8eaa398_0c03a2d6c5"
+							 tabindex="-1" value=""></div>
+						<div><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="site-btn"></div>
+					</div>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
-	<!-- Contact section end-->
+</div>
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script type='text/javascript'>
+	(function ($) {
+		window.fnames = new Array();
+		window.ftypes = new Array();
+		fnames[0] = 'EMAIL';
+		ftypes[0] = 'email';
+		fnames[1] = 'FNAME';
+		ftypes[1] = 'text';
+		fnames[4] = 'PHONE';
+		ftypes[4] = 'phone';
+		fnames[2] = 'MMERGE2';
+		ftypes[2] = 'text';
+		fnames[3] = 'MMERGE3';
+		ftypes[3] = 'text';
+	}(jQuery));
+	var $mcj = jQuery.noConflict(true);
+</script>
+
+<!--End mc_embed_signup-->
+
+<!-- Contact section end-->
 
 
 	<!-- Footer section -->
