Add section shortcuts

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 		<nav>
 			<ul class="menu-list">
 				<li class="active"><a href="index.html">Inicio</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="#Conocenos">Conócenos</a></li>
+				<li><a href="#Tratamiento">Tratamiento</a></li>
+				<li><a href="#Equipo">Equipo</a></li>
+				<li><a href="#Contacto">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -133,7 +136,7 @@
 					<a href="" class="site-btn">Agendar Cita</a>
 				</div>
 				<!-- popup video -->
-				<div class="intro-video">
+				<div class="intro-video" id="Conocenos">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<img src="img/video.jpg" alt="">
@@ -253,7 +256,7 @@
 
 
 	<!-- Services section -->
-	<div class="services-section spad">
+	<div class="services-section spad" id="Tratamiento">
 		<div class="container">
 			<div class="section-title dark" >
 				<h2> <span>Armonización estética </span> Group: Tratamientos </h2>
@@ -381,7 +384,7 @@
 
 
 	<!-- Team Section -->
-	<div class="team-section spad">
+	<div class="team-section spad" id="Equipo">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="section-title">
@@ -447,7 +450,7 @@
 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style> -->
-<div class="contact-section spad fix">
+<div class="contact-section spad fix" id="Contacto">
 	<div class="container">
 		<div class="row">
 
