improved  section shortcuts

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 					</div>
 				-->
 				</div>
-				<div class="text-center mt60">
+				<div class="text-center mt60" id="Conocenos">
 					<a href="" class="site-btn">Agendar Cita</a>
 				</div>
 				<!-- popup video -->
-				<div class="intro-video" id="Conocenos">
+				<div class="intro-video" >
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<img src="img/video.jpg" alt="">
@@ -256,12 +256,12 @@
 
 
 	<!-- Services section -->
-	<div class="services-section spad" id="Tratamiento">
+	<div class="services-section spad" >
 		<div class="container">
 			<div class="section-title dark" >
-				<h2> <span>Armonización estética </span> Group: Tratamientos </h2>
+				<h2 > <span id="Tratamiento">Armonización estética </span> Group: Tratamientos </h2>
 			</div>
-			<div class="row">
+			<div class="row" >
 				<!-- single service -->
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
