--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<ul class="menu-list">
 				<li class="active"><a href="index.html">Inicio</a></li>
 				<li><a href="#Conocenos">Conócenos</a></li>
-				<li><a href="#Tratamiento">Tratamiento</a></li>
+				<li><a href="#Tratamiento">Tratamientos</a></li>
 				<li><a href="#Equipo">Equipo</a></li>
 				<li><a href="#Contacto">Contacto</a></li>
 			</ul>
@@ -133,14 +133,14 @@
 				-->
 				</div>
 				<div class="text-center mt60" id="Conocenos">
-					<a href="" class="site-btn">Agendar Cita</a>
+					<a href="https://wa.me/573134380795" class="site-btn">Agendar Cita</a>
 				</div>
 				<!-- popup video -->
 				<div class="intro-video" >
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<img src="img/video.jpg" alt="">
-							<a href="https://www.youtube.com/watch?v=JgHfx2v9zOU" class="video-popup">
+							<a href="https://youtu.be/laujhcBHAZU" class="video-popup">
 								<i class="fa fa-play"></i>
 							</a>
 						</div>
@@ -431,7 +431,7 @@
 				</div>
 				<div class="col-md-3">
 					<div class="promo-btn-area">
-						<a href="" class="site-btn btn-2">Agendar Cita</a>
+						<a href="https://wa.me/573134380795" class="site-btn btn-2">Agendar Cita</a>
 					</div>
 				</div>
 			</div>
@@ -442,64 +442,58 @@
 
 	<!-- Contact section -->
 
-<!-- Begin Mailchimp Signup Form -->
-
-<!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style> -->
 <div class="contact-section spad fix" id="Contacto">
 	<div class="container">
 		<div class="row">
 
-				<div class="col-md-5 col-md-offset-1 contact-info col-push">
-						<div class="section-title left">
-							<h2>Contact us</h2>
-						</div>
-						<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. </p>
-						<h3 class="mt60">Main Office</h3>
-						<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
-						<p class="con-item">0034 37483 2445 322</p>
-						<p class="con-item">hello@company.com</p>
-					</div>
-					<div class="col-md-6 col-pull">
-			<form action="https://ivangelramos.us19.list-manage.com/subscribe/post?u=ccc8bdf14bc9360f2e8eaa398&amp;id=0c03a2d6c5"
-			 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-class" id="con_form" target="_blank"
-			 novalidate>
-				<!--<div class="col-md-5 col-md-offset-1 contact-info col-push"> -->
-					<div class="section-title left">
-						<h2>Armonización Estética Group: Contacto</h2>
-						
-						<div class="col-sm-6">
-						<!--	<label for="mce-EMAIL">Tu correo electrónico <span class="asterisk">*</span>
-							</label> -->
-							<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Tu Correo *">
-						</div>
+			<div class="col-md-5 col-md-offset-1 contact-info col-push">
+				<div class="section-title left">
+					<h2>Contact us</h2>
+				</div>
+				<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor.
+					Donec elementum velit a orci facilisis rutrum. </p>
+				<h3 class="mt60">Main Office</h3>
+				<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
+				<p class="con-item">0034 37483 2445 322</p>
+				<p class="con-item">hello@company.com</p>
+			</div>
+			<div class="col-md-6 col-pull">
 
-						<div class="col-sm-6">
-							<!--<label for="mce-FNAME">Nombre completo <span class="asterisk">*</span>
+			
+
+				<!-- Begin Mailchimp Signup Form -->
+				<form action="https://armonizacionestetica.us19.list-manage.com/subscribe/post?u=ccc8bdf14bc9360f2e8eaa398&amp;id=0c03a2d6c5"
+				 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-class" id="con_form" target="_blank"
+				 novalidate>
+					<div id=" col-md-5 col-md-offset-1 contact-info col-push">
+						<h2> ARMONIZACIÓN ESTÉTICA GROUP: CONTACTO</h2>
+
+						<div class=" col-sm-6">
+							<label for="mce-EMAIL">Tu correo electrónico <span class="asterisk">*</span>
 							</label>
-							-->
-							<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="Tu nombre completo *">
+							<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 						</div>
-						<div class="col-sm-6">
-							<!--<label for="mce-PHONE">Tu teléfono <span class="asterisk">*</span>
-							</label> -->
-							<input type="text" name="PHONE" class="required" value="" id="mce-PHONE" placeholder="Tu Teléfono *">
+						<div class=" col-sm-6">
+							<label for="mce-FNAME">Nombre completo <span class="asterisk">*</span>
+							</label>
+							<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
 						</div>
-						<div class="col-sm-6">
-							<!--<label for="mce-MMERGE2">Tu ciudad y país <span class="asterisk">*</span>
-							</label> -->
-							<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2" placeholder="Tu Ciudad y país *">
+						<div class=" size1of2 col-sm-6">
+							<label for="mce-PHONE">Tu teléfono <span class="asterisk">*</span>
+							</label>
+							<input type="text" name="PHONE" class="required" value="" id="mce-PHONE">
+						</div>
+						<div class=" col-sm-6">
+							<label for="mce-MMERGE2">Tu ciudad y país <span class="asterisk">*</span>
+							</label>
+							<input type="text" value="" name="MMERGE2" class="required" id="mce-MMERGE2">
 						</div>
 						<div class="col-sm-12">
-							<!--<label for="mce-MMERGE3">Tu mensaje <span class="asterisk">*</span>
-							</label> -->
-							<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="Tu Mensaje *">
+							<label for="mce-MMERGE3">Tu mensaje <span class="asterisk">*</span>
+							</label>
+							<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3">
 						</div>
-						<div class="indicates-required"><span class="asterisk">*</span> Campos requeridos</div>
+						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 						<div id="mce-responses" class="clear">
 							<div class="response" id="mce-error-response" style="display:none"></div>
 							<div class="response" id="mce-success-response" style="display:none"></div>
@@ -507,36 +501,26 @@ We recommend moving this block and the preceding CSS link to the HEAD of your HT
 						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccc8bdf14bc9360f2e8eaa398_0c03a2d6c5"
 							 tabindex="-1" value=""></div>
-						<div><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="site-btn"></div>
+						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button site-btn"></div>
 					</div>
-				</div>
-			</form>
+				</form>
+			</div>
+
+			<!--End mc_embed_signup-->
+
 		</div>
 	</div>
 </div>
 
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-<script type='text/javascript'>
-	(function ($) {
-		window.fnames = new Array();
-		window.ftypes = new Array();
-		fnames[0] = 'EMAIL';
-		ftypes[0] = 'email';
-		fnames[1] = 'FNAME';
-		ftypes[1] = 'text';
-		fnames[4] = 'PHONE';
-		ftypes[4] = 'phone';
-		fnames[2] = 'MMERGE2';
-		ftypes[2] = 'text';
-		fnames[3] = 'MMERGE3';
-		ftypes[3] = 'text';
-	}(jQuery));
-	var $mcj = jQuery.noConflict(true);
-</script>
+
+
+
 
 <!--End mc_embed_signup-->
 
 <!-- Contact section end-->
+
+
 
 
 	<!-- Footer section -->
