--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="hero-content">
 			<div class="hero-center">
 				<img src="img/big-logo.png" alt="">
-				<p>Medicina para la estética</p>
+				<p>MEDICINA PARA LA ESTÉTICA</p>
 			</div>
 		</div>
 		<!-- slider -->
@@ -121,12 +121,12 @@
 		<div class="about-contant">
 			<div class="container">
 				<div class="section-title">
-					<h2> <span>Rejuvenecimiento facial</span></h2>
+					<h2> <span>Rejuvenecimiento facial: </span> Con nosotros la vejez tendrá que esperar</h2>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-6">
 						<p> Con nostros la vejez tendrá que esperar </p>
-					</div>
+					</div> -->
 				<!--	<div class="col-md-6">
 						<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. Quisque porttitor porttitorlaoreet vel risus et luctus.</p>
 					</div>
@@ -259,7 +259,7 @@
 	<div class="services-section spad" >
 		<div class="container">
 			<div class="section-title dark" >
-				<h2 > <span id="Tratamiento">Armonización estética </span> Group: Tratamientos </h2>
+				<h2 > <span id="Tratamiento">Armonización estética Group:</span>  Tratamientos </h2>
 			</div>
 			<div class="row" >
 				<!-- single service -->
@@ -427,7 +427,7 @@
 			<div class="row">
 				<div class="col-md-9">
 					<h2>Armonización Estética Group</h2>
-					<p>Con nosotros la vejez tendrá que esperar</p>
+					<p>CON NOSOTROS LA VEJEZ TENDRÁ QUE ESPERAR</p>
 				</div>
 				<div class="col-md-3">
 					<div class="promo-btn-area">
@@ -448,14 +448,16 @@
 
 			<div class="col-md-5 col-md-offset-1 contact-info col-push">
 				<div class="section-title left">
-					<h2>Contact us</h2>
+					<h2>TÉRMINOS Y CONDICIONES</h2>
 				</div>
-				<p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor.
-					Donec elementum velit a orci facilisis rutrum. </p>
-				<h3 class="mt60">Main Office</h3>
-				<p class="con-item">C/ Libertad, 34 <br> 05200 Arévalo </p>
-				<p class="con-item">0034 37483 2445 322</p>
-				<p class="con-item">hello@company.com</p>
+				<p> Al enviarnos tu mensaje estás aceptando ser parte de la lista de 
+					suscriptores de Armonización Estética Group y nos autorizas a 
+					seguir en contacto contigo.
+				</p>
+				<h3 class="mt60">Visitanos</h3>
+				<p class="con-item"> Calle 140 No. 10A - 48 <br> Torre Cedro Point <br>
+					Consultorio 601 <br>Bogotá, Colombia </p>
+				<p class="con-item">+57 3134380795</p>
 			</div>
 			<div class="col-md-6 col-pull">
 
@@ -493,7 +495,7 @@
 							</label>
 							<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3">
 						</div>
-						<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+						<div class="indicates-required"><span class="asterisk">*</span> Campos obligatorios </div>
 						<div id="mce-responses" class="clear">
 							<div class="response" id="mce-error-response" style="display:none"></div>
 							<div class="response" id="mce-success-response" style="display:none"></div>
@@ -501,7 +503,7 @@
 						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ccc8bdf14bc9360f2e8eaa398_0c03a2d6c5"
 							 tabindex="-1" value=""></div>
-						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button site-btn"></div>
+						<div class="clear"><input type="submit" value="Enviar" name="subscribe" id="mc-embedded-subscribe" class="button site-btn"></div>
 					</div>
 				</form>
 			</div>
@@ -525,7 +527,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2017 All rights reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></h2>
+		<h2>2019 All rights reserved. Designed by <a href="http://ivangelramos.com" target="_blank">Ivan Ramos</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
