Responsive design fix

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		<div class="responsive"><i class="fa fa-bars"></i></div>
 		<nav>
 			<ul class="menu-list">
-				<li class="active"><a href="index.html">Inicio</a></li>
-				<li><a href="#Conocenos">Conócenos</a></li>
-				<li><a href="#Tratamiento">Tratamientos</a></li>
-				<li><a href="#Equipo">Equipo</a></li>
-				<li><a href="#Contacto">Contacto</a></li>
+				<li class="active"><a href="index.html">INICIO</a></li>
+				<li><a href="#Conocenos">CONÓCENOS</a></li>
+				<li><a href="#Tratamiento">TRATAMIENTOS</a></li>
+				<li><a href="#Equipo">EQUIPO</a></li>
+				<li><a href="#Contacto">CONTACTO</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -88,7 +88,7 @@
 								<i class="flaticon-023-flask"></i>
 							</div>
 							<h2>Medicina Estética</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Los mejores tratamientos antienvejecimiento.</p>
 						</div>
 					</div>
 					<!-- single card -->
@@ -97,18 +97,18 @@
 							<div class="icon">
 								<i class="flaticon-011-compass"></i>
 							</div>
-							<h2>Estética Facial</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<h2>Estética Facial y Corporal</h2>
+							<p>Con técnicas avanzadas a tu disposición.</p>
 						</div>
 					</div>
 					<!-- single card -->
-					<div class="col-md-4 col-sm-12">
+					<div class="col-md-4 col-sm-6">
 						<div class="lab-card">
 							<div class="icon">
 								<i class="flaticon-037-idea"></i>
 							</div>
 							<h2>Nutrición</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Asesoría y coach nutricional.</p>
 						</div>
 					</div>
 				</div>
@@ -270,7 +270,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Botox</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Toxina Botulínica: Estética y manejo de patologías clínicas.</p>
 						</div>
 					</div>
 				</div>
@@ -282,7 +282,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Bichectomia</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Bichectomia no quirúrgica.</p>
 						</div>
 					</div>
 				</div>
@@ -294,7 +294,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Peeling</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Peeling químico, mecánico y enzimático.</p>
 						</div>
 					</div>
 				</div>
@@ -306,7 +306,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Lifting</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Lifting facial.</p>
 						</div>
 					</div>
 				</div>
@@ -318,7 +318,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Mesoterapia</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Mesoterapia facial y corporal.</p>
 						</div>
 					</div>
 				</div>
@@ -330,7 +330,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Tratamiento para el acné</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Tratamiento del acné: Activo y secuelas.</p>
 						</div>
 					</div>
 				</div>
@@ -343,7 +343,7 @@
 							</div>
 							<div class="service-text">
 								<h2>Ácido hialurónico</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+								<p>Relleno anti-age con Ácido Hialurónico e Hidroxiapatita y voluminización y perfilado de labios con Ácido Hialurónico.</p>
 							</div>
 						</div>
 					</div>
@@ -356,7 +356,7 @@
 						</div>
 						<div class="service-text">
 							<h2>Nutrición</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+							<p>Descripción: Asesoría y coach nutricional.</p>
 						</div>
 					</div>
 				</div>
@@ -369,7 +369,7 @@
 							</div>
 							<div class="service-text">
 								<h2>Rinomodelación</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo est, feugiat nec elementum id, suscipit id nulla..</p>
+								<p>Descripción: Rinomodelación no quirúrgica.</p>
 							</div>
 						</div>
 					</div>
@@ -396,7 +396,7 @@
 					<div class="member">
 						<img src="img/team/1.jpg" alt="">
 						<h2>Diana Aguilar</h2>
-						<h3>Project Manager</h3>
+						<h3>Médico Anestesiólogo y Regenerativo.</h3>
 					</div>
 				</div>
 				<!-- single member -->
@@ -404,7 +404,7 @@
 					<div class="member">
 						<img src="img/team/2.jpg" alt="">
 						<h2>Diógenes Bastidas</h2>
-						<h3>Junior developer</h3>
+						<h3>Cirujano General y Médico Regenerativo.</h3>
 					</div>
 				</div>
 				<!-- single member -->
@@ -412,7 +412,7 @@
 					<div class="member">
 						<img src="img/team/3.jpg" alt="">
 						<h2>Andreina Charles</h2>
-						<h3>Digital designer</h3>
+						<h3>Terapeuta / Cosmeatra.</h3>
 					</div>
 				</div>
 			</div>
@@ -457,7 +457,7 @@
 				<h3 class="mt60">Visitanos</h3>
 				<p class="con-item"> Calle 140 No. 10A - 48 <br> Torre Cedro Point <br>
 					Consultorio 601 <br>Bogotá, Colombia </p>
-				<p class="con-item">+57 3134380795</p>
+				<p class="con-item">(+57) 3134380795</p>
 			</div>
 			<div class="col-md-6 col-pull">
 
@@ -527,7 +527,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2019 All rights reserved. Designed by <a href="http://ivangelramos.com" target="_blank">Ivan Ramos</a></h2>
+		<h2>2019 All rights reserved. Designed by <a href="http://ivangelramos.com" target="_blank">Iván Ramos</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
