Responsive design fix

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 							<i class="flaticon-023-flask"></i>
 						</div>
 						<div class="service-text">
-							<h2>Botox</h2>
-							<p>Toxina Botulínica: Estética y manejo de patologías clínicas.</p>
+							<h2>Botox: Toxina Botulínica</h2>
+							<p>Estética y manejo de patologías clínicas.</p>
 						</div>
 					</div>
 				</div>
@@ -454,7 +454,7 @@
 					suscriptores de Armonización Estética Group y nos autorizas a 
 					seguir en contacto contigo.
 				</p>
-				<h3 class="mt60">Visitanos</h3>
+				<h3 class="mt60">Visítanos</h3>
 				<p class="con-item"> Calle 140 No. 10A - 48 <br> Torre Cedro Point <br>
 					Consultorio 601 <br>Bogotá, Colombia </p>
 				<p class="con-item">(+57) 3134380795</p>
