--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 				<div class="intro-video" >
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<img src="img/video.jpg" alt="">
-							<a href="https://youtu.be/laujhcBHAZU" class="video-popup">
+							<img src="img/video.jpg" alt="video">
+							<a href="https://www.youtube.com/watch?v=laujhcBHAZU" class="video-popup">
 								<i class="fa fa-play"></i>
 							</a>
 						</div>
