--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
 
 
 	<!-- Services section -->
-	<div class="services-section spad" >
-		<div class="container">
-			<div class="section-title dark" >
-				<h2 > <span id="Tratamiento">Armonización estética Group:</span>  Tratamientos </h2>
+	<div class="services-section spad"  >
+		<div class="container" >
+			<div class="section-title dark">
+				<h2 id="Tratamiento"> <span >Armonización estética Group:</span>  Tratamientos </h2>
 			</div>
 			<div class="row" >
 				<!-- single service -->
