--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="lab-card">
 							<div class="icon">
-								<i class="flaticon-011-compass"></i>
+								<i class="flaticon-023-flask"></i>
 							</div>
 							<h2>Estética Facial y Corporal</h2>
 							<p>Con técnicas avanzadas a tu disposición.</p>
@@ -105,7 +105,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="lab-card">
 							<div class="icon">
-								<i class="flaticon-037-idea"></i>
+								<i class="flaticon-023-flask"></i>
 							</div>
 							<h2>Nutrición</h2>
 							<p>Asesoría y coach nutricional.</p>
@@ -266,7 +266,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-023-flask"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Botox: Toxina Botulínica</h2>
@@ -278,7 +278,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-011-compass"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Bichectomia</h2>
@@ -290,7 +290,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-037-idea"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Peeling</h2>
@@ -302,7 +302,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-039-vector"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Lifting</h2>
@@ -314,7 +314,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-036-brainstorming"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Mesoterapia</h2>
@@ -326,7 +326,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-026-search"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Tratamiento para el acné</h2>
@@ -339,7 +339,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="service">
 							<div class="icon">
-								<i class="flaticon-026-search"></i>
+								<i class="flaticon-024-idea-2"></i>
 							</div>
 							<div class="service-text">
 								<h2>Ácido hialurónico</h2>
@@ -352,7 +352,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<div class="icon">
-							<i class="flaticon-026-search"></i>
+							<i class="flaticon-024-idea-2"></i>
 						</div>
 						<div class="service-text">
 							<h2>Nutrición</h2>
@@ -365,7 +365,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="service">
 							<div class="icon">
-								<i class="flaticon-026-search"></i>
+								<i class="flaticon-024-idea-2"></i>
 							</div>
 							<div class="service-text">
 								<h2>Rinomodelación</h2>
