--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader">
-			<img src="img/logo.png" alt="">
+			<img src="img/logo.png" alt="" id="main-logo"> 
 			<h2>Cargando.....</h2>
 		</div>
 	</div>
