Add social buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,700|Roboto:300,400,700" rel="stylesheet">
+	<!--Buttons icons-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  <!--Fa icons for firefox-->
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -458,11 +461,15 @@
 				<p class="con-item"> Calle 140 No. 10A - 48 <br> Torre Cedro Point <br>
 					Consultorio 601 <br>Bogotá, Colombia </p>
 				<p class="con-item">(+57) 3134380795</p>
+				<p class="con-item">Visita nuestras redes sociales</p>
+			<div class="social">
+				<a href="https://www.facebook.com/armonizacionestetica/" target="_blank" class="fa fa-facebook"></a>
+				<a href="https://www.instagram.com/armonizacionestetica" target="_blank" class="fa fa-instagram"></a>
 			</div>
+			</div>
+				<div class="social">
+						
 			<div class="col-md-6 col-pull">
-
-
-
 				<!-- Begin Mailchimp Signup Form -->
 				<form action="https://armonizacionestetica.us19.list-manage.com/subscribe/post?u=ccc8bdf14bc9360f2e8eaa398&amp;id=0c03a2d6c5"
 				 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-class" id="con_form" target="_blank"
@@ -527,7 +534,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2019 All rights reserved. Designed by <a href="http://ivangelramos.com" target="_blank">Iván Ramos</a></h2>
+		<h2>2019 All rights reserved. Designed by  <a href="https://www.latorredev.com" target="_blank">David Latorre e </a><a href="http://ivangelramos.com" target="_blank">Iván Ramos</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
