--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2019 All rights reserved. Designed by  <a href="latorredev.com" target="_blank">David Latorre </a>e <a href="http://ivangelramos.com" target="_blank">Iván Ramos</a></h2>
+		<h2>2019 All rights reserved. Designed by  <a href="http://latorredev.com" target="_blank">David Latorre </a>e <a href="http://ivangelramos.com" target="_blank">Iván Ramos</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
